[gd_scene load_steps=2 format=2]

[ext_resource path="res://Skripte/textedit.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 553.729
margin_top = 346.394
margin_right = 694.729
margin_bottom = 426.394
text = "Speichern"

[node name="TabContainer" type="TabContainer" parent="."]
margin_right = 467.0
margin_bottom = 430.0

[node name="TextEdit" type="TextEdit" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
syntax_highlighting = true

[node name="TextEdit2" type="TextEdit" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
syntax_highlighting = true

[node name="Label" type="Label" parent="."]
margin_left = 494.0
margin_top = 26.0
margin_right = 680.0
margin_bottom = 175.0
text = "Hier wird sich was ver√§ndern.
TE2."
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="tab_changed" from="TabContainer" to="." method="_on_TabContainer_tab_changed"]
